# kivi

./: CITATION.cff  Cargo.toml  NOTES_AT_FUTURE_ME.md  README.md  Taskfile.yml  t
.github/workflows/: build-linux.yml  build-macos-arm64.yml  build-macos.yml  build-windows.yml
src/: lib.rs  loader.rs  model.rs
tests/: mod.rs  test_api.rs  test_cloning.rs
tests/api/: mod.rs  test_api.rs
tests/cloning/: mod.rs  test_cloning.rs
tests/data/: data003.kivi  data004.kivi  data005.kivi  data006.kivi  issues.kivi  properties.kivi
tests/loading/: mod.rs  test_load_from_file.rs  test_load_from_string.rs
tests/loading/data/: data01.kivi  data02.kivi
