[package]
name = "kivi"
version = "1.0.1"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "KIVI | Key-value pair with key and value in separate lines"
documentation = "https://docs.rs/kivi"
repository = "https://github.com/EngosSoftware/kivi.git"
keywords = ["key", "value", "pair", "double", "line"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
edition = "2021"
