[package]
name = "kivi"
version = "1.2.2"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Key-value pair with key and value in separate lines"
documentation = "https://docs.rs/kivi"
repository = "https://github.com/EngosSoftware/kivi.git"
keywords = ["key", "value", "pair", "separate", "lines"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    ".gitignore",
    "NOTES_AT_FUTURE_ME.md",
    "CODE_OF_CONDUCT.md"
]

[dependencies]
normalized-line-endings = "1.0.3"
